force-app/main/default/objects/vxVaccination_Site_Resource__c/vxVaccination_Site_Resource__c.object-meta.xml
<CustomObject>
    <description>Associates a User a with a Vaccination Site</description>
    <label>Vaccination Site Resource</label>
    <nameField>
        <displayFormat>VSR-{0000}</displayFormat>
        <label>Vaccination Site Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccination Site Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>