force-app/main/default/objects/vxVaccination_Site_Resource__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Vaccination Site Account Record</description>
    <inlineHelpText>The Vaccination Site Account Record</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaccination Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vaccination Site Resources</relationshipLabel>
    <relationshipName>Vaccination_Site_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>