force-app/main/default/objects/vxVaccination_Site_Resource__c/fields/Default_Site__c.field-meta.xml
<CustomField>
    <fullName>Default_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vaccine Site User is associated with, the default site determines the Vaccine Asset record selected for the user during the vaccine administration process</description>
    <inlineHelpText>Vaccine Site User is associated with, the default site determines the Vaccine Asset record selected for the user during the vaccine administration process</inlineHelpText>
    <label>Default Site</label>
    <type>Checkbox</type>
</CustomField>