force-app/main/default/objects/vxVaccination_Site_Resource__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User associated with this Vaccination Site</description>
    <inlineHelpText>User associated with this Vaccination Site</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vaccination_Site_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>