force-app/main/default/objects/vxVaccination_Site_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>User__c</columns>
    <columns>Default_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>